Fixed big white space

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ html, body {
 	margin: 0 auto;
 	padding:1em;
 	max-width:800px;
-	margin-top:1.5em;
+	margin-top:1.3em;
 }
 .main h1 {
 	padding: 30px 0 0 0;
@@ -132,10 +132,6 @@ html, body {
 .bus-stop {
 	text-align: center;
 	margin-bottom:1.3em;
-}
-
-.display-timetable {
-	margin-top: 20px;
 }
 
 	.display-list {
